--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="css/themes/indigo-white.css">
 </head>
 <body>
+	<div id="root"></div>
 	<main>
 		<div class="intro">Hello, I'm Manoj!</div>
 		<div class="tagline">Full Stack Dev | Tech geek | Blogger |  A Carry</div>
